Bug 792254 - Part 2: Categorize unit tests that access remote servers as new JUnit 4 IntegrationTestCategory.